# sheldr

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: build-ci.yml
include/engine/: game.h
src/: main.cpp
src/engine/: game.cpp  game.h  values.cpp  values.h
src/engine/collider/: circle_collider.cpp  circle_collider.h  collider.cpp  rectangle_collider.cpp  rectangle_collider.h
src/engine/control/: audio_manager.cpp  audio_manager.h  process_events_manager.cpp  process_events_manager.h  state_manager.cpp  state_manager.h  texture_manager.cpp  texture_manager.h  window_manager.cpp  window_manager.h
src/engine/sprite/: sprite.cpp  sprite.h  sprite_group.cpp  sprite_group.h
src/engine/utils/: core_statistics_hub.cpp  core_statistics_hub.h  load.cpp  load.h  math_utils.cpp  math_utils.h  simple_utils.cpp  simple_utils.h
src/game/: building.cpp  building.h  bullet.cpp  bullet.h  circle_collider.cpp  circle_collider.h  collider.h  creature.cpp  creature.h  game.cpp  game.h  player.cpp  player.h  rectangle_collider.cpp  rectangle_collider.h  wall.h
src/game/states/: playing_state.cpp  playing_state.h
